<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="Hardware_3100" Id="{4f4dbe4c-40b1-4ae4-ba59-961b9e7d3c21}" SpecialFunc="None">
    <Declaration><![CDATA[
PROGRAM Hardware_3100
VAR
    // Servos *********************************************************************
	fbX_Achse										: FB_Achse_NC_PTP_Beckhoff; 
	fbY_Achse										: FB_Achse_NC_PTP_Beckhoff; 
	fbZ_Achse										: FB_Achse_NC_PTP_Beckhoff; 

    // Frequenzumrichter **********************************************************
	fbBohraggr_Schlosskast							: FB_SEW_MOVITRAC_C_CoE;
	fbBohraggr_Vorbohren							: FB_SEW_MOVITRAC_C_CoE;
	fbBohraggr_Stulpfraes							: FB_SEW_MOVITRAC_C_CoE;

    // Sensorik *******************************************************************
    fbStillBohraggr_Schlosskast                		: FB_Belegt;
    fbStillBohraggr_Vorbohren               		: FB_Belegt;
    fbStillBohraggr_Stulpfraes                		: FB_Belegt;

    // Ventile ********************************************************************
    fbSchlosskast_Vorlegehub           				: FB_Ventil_V2;
    fbVorbohren_Bohrhub                				: FB_Ventil_V2;
    fbStulpfraes_Vorlegehub            				: FB_Ventil_V2;
    fbNullkante	                    				: FB_Ventil_V2;
    fbSchienenklemm                    				: FB_Ventil_V2;

    // ***** Hilfsmerker***********************************************************
    (*
        Ventile sind über den DUT_Ventil_para vorparametriert
                ueberwachung_vor_aktiv    : BOOL := TRUE;   // 0 = Endlagenüberwachung vor deaktiviert
                ueberwachung_zur_aktiv    : BOOL := TRUE;   // 0 = Endlagenüberwachung zurück deaktiviert
                ausgang_vor_halten        : BOOL := FALSE;  // 1 = Ausgang immer Ein, sonst 0 in Endlage/1 nicht in Endlage
                ausgang_zur_halten        : BOOL := FALSE;  // 1 = Ausgang immer Ein, sonst 0 in Endlage/1 nicht in Endlage
                entprellen_vor_aktiv      : BOOL := TRUE;   // 0 = Endlage sofort überwachen wenn einmal erreicht
                entprellen_zur_aktiv      : BOOL := TRUE;   // 0 = Endlage sofort überwachen wenn einmal erreicht
                ueberwachungszeit_vor     : TIME := T#10S;  // Überwachungszeit in ms (0-30000ms)
                ueberwachungszeit_zur     : TIME := T#10S;  // Überwachungszeit in ms (0-30000ms)
                entprellungszeit_vor      : TIME := T#50MS; // Entprellungszeit in ms (0-10000ms)
                entprellungszeit_zur      : TIME := T#50MS; // Entprellungszeit in ms (0-10000ms)

        falls etwas anderes gewünscht ist, kann man gezielt für das Ventil die Parameter anpassen
        Beispiel:   ***.para.ausgang_vor_halten := TRUE;
                    ***.para.entprellungszeit_vor := T#100MS;
    *)
END_VAR
    ]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// Aktionen aufrufen
//_________________________________________________
	A_Sensorik();
	A_Umrichter();
	A_Ventile();
	A_Servo();
		  ]]></ST>
    </Implementation>
    <Action Name="A_Sensorik" Id="{a4cf8ca7-4507-4ac9-9ce5-88279c22e819}">
      <Implementation>
        <ST><![CDATA[					
// ***** Sensorik entprellen *********************************************************
	//********************************************************************************
fbStillBohraggr_Schlosskast		(	in_Sensor:=,
									in_zeit_aus:=T#100MS,
									in_zeit_aus:=T#100MS,
									Q=>);
									
fbStillBohraggr_Vorbohren		(	in_Sensor:=,
									in_zeit_aus:=T#100MS,
									in_zeit_aus:=T#100MS,
									Q=>);
									
fbStillBohraggr_Stulpfraes		(	in_Sensor:=,
									in_zeit_aus:=T#100MS,
									in_zeit_aus:=T#100MS,
									Q=>);
									]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Servo" Id="{be1b4eae-596d-4f00-8fc9-b0ed65c5bc73}">
      <Implementation>
        <ST><![CDATA[					
// ***** Servoregler *****************************************************************
	//********************************************************************************
	GVL_3100.X_Achse_steuern.Reglersperre	:= FALSE;
	GVL_3100.X_Achse_steuern.Freigabe 		:= FALSE;
	
	fbX_Achse(
	in_Reglersperre				:= GVL_3100.X_Achse_steuern.Reglersperre, 
	in_Freigabe					:= GVL_3100.X_Achse_steuern.Freigabe,
	in_Reset					:= GVL_Visu_3100.SteuerStatus.reset   
								OR GVL_0000.stoerung_quitt,                      
	in_Hand						:= GVL_Visu_3100.SteuerStatus.hand,              
	in_Auto						:= GVL_Visu_3100.SteuerStatus.auto,                 
	in_Auto_Override			:= GVL_Visu_0000.override,    
	in_Auto_pos					:= , 
	in_PosFenster				:= 0.05, 
	in_Ref_pos					:= 0.0, 
	in_HomingOption				:= , 
	in_EndlageRef				:= , 
	in_DirRef					:= , 
	in_PosEa					:= ,                                       
	out_ist_pos					=> GVL_3100.X_Achse_status.ist_pos, 
	out_in_pos					=> GVL_3100.X_Achse_status.in_pos,   
	out_ziel_pos				=> GVL_3100.X_Achse_status.ziel_pos, 
	out_nicht_ref				=> GVL_3100.X_Achse_status.nicht_ref,      
	out_bremse					=> GVL_3100.X_Achse_status.bremse,           
	out_Achs_Status				=> GVL_3100.X_Achse_status.Achs_Status,  
	inout_NC					:= EAs_3100.ea_X_Achse, 
	inout_service				:= GVL_Visu_3100.X_Achse, 
	inout_Ref_start				:= GVL_3100.X_Achse_steuern.Ref_start, 
	inout_Auto_start			:= GVL_3100.X_Achse_steuern.Auto_start, 
	inout_Auto_stop				:= GVL_3100.X_Achse_steuern.Auto_stop);
	
	GVL_Meldungen.Diagnose_3000.Nr_010	:= fbX_Achse.out_Achs_ErrorID;	
	GVL_Meldungen.Meldungen_3000.Nr_010 := fbX_Achse.out_Achs_Error OR fbX_Achse.out_FB_Error OR fbX_Achse.out_Achs_ErrorID <> 0;		
	GVL_Meldungen.Meldungen_3000.Nr_011 := FALSE;
	GVL_Meldungen.Meldungen_3000.Nr_012 := FALSE;
	//********************************************************************************
					
					
	GVL_3100.Y_Achse_steuern.Reglersperre	:= FALSE;
	GVL_3100.Y_Achse_steuern.Freigabe 		:= FALSE;
	
	fbY_Achse(
	in_Reglersperre				:= GVL_3100.Y_Achse_steuern.Reglersperre, 
	in_Freigabe					:= GVL_3100.Y_Achse_steuern.Freigabe,
	in_Reset					:= GVL_Visu_3100.SteuerStatus.reset   
								OR GVL_0000.stoerung_quitt,                      
	in_Hand						:= GVL_Visu_3100.SteuerStatus.hand,              
	in_Auto						:= GVL_Visu_3100.SteuerStatus.auto,                 
	in_Auto_Override			:= GVL_Visu_0000.override,    
	in_Auto_pos					:= , 
	in_PosFenster				:= 0.05, 
	in_Ref_pos					:= 0.0, 
	in_HomingOption				:= , 
	in_EndlageRef				:= , 
	in_DirRef					:= , 
	in_PosEa					:= ,                                       
	out_ist_pos					=> GVL_3100.Y_Achse_status.ist_pos, 
	out_in_pos					=> GVL_3100.Y_Achse_status.in_pos,   
	out_ziel_pos				=> GVL_3100.Y_Achse_status.ziel_pos, 
	out_nicht_ref				=> GVL_3100.Y_Achse_status.nicht_ref,      
	out_bremse					=> GVL_3100.Y_Achse_status.bremse,           
	out_Achs_Status				=> GVL_3100.Y_Achse_status.Achs_Status,  
	inout_NC					:= EAs_3100.ea_Y_Achse, 
	inout_service				:= GVL_Visu_3100.Y_Achse, 
	inout_Ref_start				:= GVL_3100.Y_Achse_steuern.Ref_start, 
	inout_Auto_start			:= GVL_3100.Y_Achse_steuern.Auto_start, 
	inout_Auto_stop				:= GVL_3100.Y_Achse_steuern.Auto_stop);
	
	GVL_Meldungen.Diagnose_3000.Nr_013	:= fbY_Achse.out_Achs_ErrorID;	
	GVL_Meldungen.Meldungen_3000.Nr_013 := fbY_Achse.out_Achs_Error OR fbY_Achse.out_FB_Error OR fbY_Achse.out_Achs_ErrorID <> 0;		
	GVL_Meldungen.Meldungen_3000.Nr_014 := FALSE;
	GVL_Meldungen.Meldungen_3000.Nr_015 := FALSE;
	//********************************************************************************


	GVL_3100.Z_Achse_steuern.Reglersperre	:= FALSE;
	GVL_3100.Z_Achse_steuern.Freigabe 		:= FALSE;
	
	fbZ_Achse(
	in_Reglersperre				:= GVL_3100.Z_Achse_steuern.Reglersperre, 
	in_Freigabe					:= GVL_3100.Z_Achse_steuern.Freigabe,
	in_Reset					:= GVL_Visu_3100.SteuerStatus.reset   
								OR GVL_0000.stoerung_quitt,                      
	in_Hand						:= GVL_Visu_3100.SteuerStatus.hand,              
	in_Auto						:= GVL_Visu_3100.SteuerStatus.auto,                 
	in_Auto_Override			:= GVL_Visu_0000.override,    
	in_Auto_pos					:= , 
	in_PosFenster				:= 0.05, 
	in_Ref_pos					:= 0.0, 
	in_HomingOption				:= , 
	in_EndlageRef				:= , 
	in_DirRef					:= , 
	in_PosEa					:= ,                                       
	out_ist_pos					=> GVL_3100.Z_Achse_status.ist_pos, 
	out_in_pos					=> GVL_3100.Z_Achse_status.in_pos,   
	out_ziel_pos				=> GVL_3100.Z_Achse_status.ziel_pos, 
	out_nicht_ref				=> GVL_3100.Z_Achse_status.nicht_ref,      
	out_bremse					=> GVL_3100.Z_Achse_status.bremse,           
	out_Achs_Status				=> GVL_3100.Z_Achse_status.Achs_Status,  
	inout_NC					:= EAs_3100.ea_Z_Achse, 
	inout_service				:= GVL_Visu_3100.Z_Achse, 
	inout_Ref_start				:= GVL_3100.Z_Achse_steuern.Ref_start, 
	inout_Auto_start			:= GVL_3100.Z_Achse_steuern.Auto_start, 
	inout_Auto_stop				:= GVL_3100.Z_Achse_steuern.Auto_stop);
	
	GVL_Meldungen.Diagnose_3000.Nr_016	:= fbZ_Achse.out_Achs_ErrorID;	
	GVL_Meldungen.Meldungen_3000.Nr_016 := fbZ_Achse.out_Achs_Error OR fbZ_Achse.out_FB_Error OR fbZ_Achse.out_Achs_ErrorID <> 0;		
	GVL_Meldungen.Meldungen_3000.Nr_017 := FALSE;
	GVL_Meldungen.Meldungen_3000.Nr_017 := FALSE;
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Umrichter" Id="{7ccba3e4-aa29-4e66-9ecf-ec4915ec5248}">
      <Implementation>
        <ST><![CDATA[
// ***** Frequenzumrichter ******************************************************
// ******************************************************************************
				
	GVL_Visu_3100.Bohraggr_Schlosskast.Para.Speed_Hand		:= 0;
	GVL_Visu_3100.Bohraggr_Schlosskast.Para.Beschleunigung 	:= 0;
	GVL_Visu_3100.Bohraggr_Schlosskast.Para.Verzoegerung 	:= 0;
	GVL_Visu_3100.Bohraggr_Schlosskast.Para.Einheit			:= 1;

	fbBohraggr_Schlosskast(	PD_IN	:=EAs_3100.e_Bohraggr_Schlosskast,
			IN_ReglerSperre			:=,
			IN_SteuerStatus			:=GVL_Visu_3100.SteuerStatus,
			IN_Ethercat_Adresse		:=,
			IN_Ethercat_Name		:='',
			IN_QUITTIEREN			:= GVL_0000.stoerung_quitt,
			IN_OVERRIDE				:= GVL_Visu_0000.override,
			PD_OUT					=> EAs_3100.a_Bohraggr_Schlosskast,
			OUT_Stoerung			=> GVL_Meldungen.Meldungen_3000.Nr_001,
			OUT_Fehlernummer		=> GVL_Meldungen.Diagnose_3000.Nr_001,
			OUT_Status				=> GVL_3100.Bohraggr_Schlosskast_status,
			inout_visu				:= GVL_Visu_3100.Bohraggr_Schlosskast,
			inout_steuern			:= GVL_3100.Bohraggr_Schlosskast_steuern);
	
			GVL_3100.Bohraggr_Schlosskast_steuern.vor := FALSE;
			GVL_3100.Bohraggr_Schlosskast_steuern.zur := FALSE;
			GVL_3100.Bohraggr_Schlosskast_steuern.speed := 0;
	//********************************************************************************
				
	GVL_Visu_3100.Bohraggr_Vorbohren.Para.Speed_Hand		:= 0;
	GVL_Visu_3100.Bohraggr_Vorbohren.Para.Beschleunigung 	:= 0;
	GVL_Visu_3100.Bohraggr_Vorbohren.Para.Verzoegerung 		:= 0;
	GVL_Visu_3100.Bohraggr_Vorbohren.Para.Einheit			:= 1;

	fbBohraggr_Vorbohren(	PD_IN	:=EAs_3100.e_Bohraggr_Vorbohren,
			IN_ReglerSperre			:=,
			IN_SteuerStatus			:=GVL_Visu_3100.SteuerStatus,
			IN_Ethercat_Adresse		:=,
			IN_Ethercat_Name		:='',
			IN_QUITTIEREN			:= GVL_0000.stoerung_quitt,
			IN_OVERRIDE				:= GVL_Visu_0000.override,
			PD_OUT					=> EAs_3100.a_Bohraggr_Vorbohren,
			OUT_Stoerung			=> GVL_Meldungen.Meldungen_3000.Nr_002,
			OUT_Fehlernummer		=> GVL_Meldungen.Diagnose_3000.Nr_002,
			OUT_Status				=> GVL_3100.Bohraggr_Vorbohren_status,
			inout_visu				:= GVL_Visu_3100.Bohraggr_Vorbohren,
			inout_steuern			:= GVL_3100.Bohraggr_Vorbohren_steuern);
	
			GVL_3100.Bohraggr_Vorbohren_steuern.vor := FALSE;
			GVL_3100.Bohraggr_Vorbohren_steuern.zur := FALSE;
			GVL_3100.Bohraggr_Vorbohren_steuern.speed := 0;
	//********************************************************************************
				
	GVL_Visu_3100.Bohraggr_Stulpfraes	.Para.Speed_Hand		:= 0;
	GVL_Visu_3100.Bohraggr_Stulpfraes	.Para.Beschleunigung 	:= 0;
	GVL_Visu_3100.Bohraggr_Stulpfraes	.Para.Verzoegerung 		:= 0;
	GVL_Visu_3100.Bohraggr_Stulpfraes	.Para.Einheit			:= 1;

	fbBohraggr_Stulpfraes(	PD_IN	:=EAs_3100.e_Bohraggr_Stulpfraes	,
			IN_ReglerSperre			:=,
			IN_SteuerStatus			:=GVL_Visu_3100.SteuerStatus,
			IN_Ethercat_Adresse		:=,
			IN_Ethercat_Name		:='',
			IN_QUITTIEREN			:= GVL_0000.stoerung_quitt,
			IN_OVERRIDE				:= GVL_Visu_0000.override,
			PD_OUT					=> EAs_3100.a_Bohraggr_Stulpfraes	,
			OUT_Stoerung			=> GVL_Meldungen.Meldungen_3000.Nr_003,
			OUT_Fehlernummer		=> GVL_Meldungen.Diagnose_3000.Nr_003,
			OUT_Status				=> GVL_3100.Bohraggr_Stulpfraes_status,
			inout_visu				:= GVL_Visu_3100.Bohraggr_Stulpfraes	,
			inout_steuern			:= GVL_3100.Bohraggr_Stulpfraes_steuern);
	
			GVL_3100.Bohraggr_Stulpfraes_steuern.vor := FALSE;
			GVL_3100.Bohraggr_Stulpfraes_steuern.zur := FALSE;
			GVL_3100.Bohraggr_Stulpfraes_steuern.speed := 0;
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Ventile" Id="{99e53769-bc64-4bc4-a1ed-765a49b8420f}">
      <Implementation>
        <ST><![CDATA[	
// ***** Ventile *********************************************************************
	//********************************************************************************
	
	GVL_Visu_3100.Schlosskast_Vorlegehub.para.ausgang_vor_halten:=TRUE;	
	GVL_Visu_3100.Schlosskast_Vorlegehub.para.ausgang_zur_halten:=TRUE;	
	GVL_Visu_3100.Schlosskast_Vorlegehub.para.ueberwachung_vor_aktiv:=TRUE;	
	GVL_Visu_3100.Schlosskast_Vorlegehub.para.ueberwachung_zur_aktiv:=TRUE;	
	GVL_Visu_3100.Schlosskast_Vorlegehub.para.entprellungszeit_vor:=T#50MS;	
	GVL_Visu_3100.Schlosskast_Vorlegehub.para.entprellungszeit_zur:=T#50MS;	
	fbSchlosskast_Vorlegehub  (	in_endlage_vor:= EAs_3100.e_FR_3100_Schlossbearbeitung_Bohraggregat_1_Vorlegehub_ist_vorne,
								in_endlage_zur:= EAs_3100.e_FR_3100_Schlossbearbeitung_Bohraggregat_1_Vorlegehub_ist_hinten,
								in_hand:=GVL_Visu_3100.SteuerStatus.hand,
								in_auto:=GVL_Visu_3100.SteuerStatus.auto,
								in_quit:=GVL_Visu_3100.SteuerStatus.reset 
								OR GVL_0000.stoerung_quitt,
								out_vor=>EAs_3100.a_FR_3100_Schlossbearbeitung_Bohraggregat_1_Vorlegehub_vor,
								out_zur=>EAs_3100.a_FR_3100_Schlossbearbeitung_Bohraggregat_1_Vorlegehub_zurueck,
								out_stoerung_vor=> GVL_Meldungen.Meldungen_3000.Nr_046,
								out_stoerung_zur=> GVL_Meldungen.Meldungen_3000.Nr_047,
								out_stoerung_vorzur=> GVL_Meldungen.Meldungen_3000.Nr_048,
								inout_ansteuerung:=GVL_3100.Schlosskast_Vorlegehub  ,
								inout_visu:=GVL_Visu_3100.Schlosskast_Vorlegehub  );
								
	
	GVL_Visu_3100.Vorbohren_Bohrhub.para.ausgang_vor_halten:=TRUE;	
	GVL_Visu_3100.Vorbohren_Bohrhub.para.ausgang_zur_halten:=TRUE;	
	GVL_Visu_3100.Vorbohren_Bohrhub.para.ueberwachung_vor_aktiv:=TRUE;	
	GVL_Visu_3100.Vorbohren_Bohrhub.para.ueberwachung_zur_aktiv:=TRUE;	
	GVL_Visu_3100.Vorbohren_Bohrhub.para.entprellungszeit_vor:=T#50MS;	
	GVL_Visu_3100.Vorbohren_Bohrhub.para.entprellungszeit_zur:=T#50MS;	
	fbVorbohren_Bohrhub (		in_endlage_vor:= EAs_3100.e_FR_3100_Schlossbearbeitung_Bohraggregat_2_Bohrhub_ist_vorne,
								in_endlage_zur:= EAs_3100.e_FR_3100_Schlossbearbeitung_Bohraggregat_2_Bohrhub_ist_hinten,
								in_hand:=GVL_Visu_3100.SteuerStatus.hand,
								in_auto:=GVL_Visu_3100.SteuerStatus.auto,
								in_quit:=GVL_Visu_3100.SteuerStatus.reset 
								OR GVL_0000.stoerung_quitt,
								out_vor=>EAs_3100.a_FR_3100_Schlossbearbeitung_Bohraggregat_2_Bohrhub_vor,
								out_zur=>EAs_3100.a_FR_3100_Schlossbearbeitung_Bohraggregat_2_Bohrhub_zurueck,
								out_stoerung_vor=> GVL_Meldungen.Meldungen_3000.Nr_049,
								out_stoerung_zur=> GVL_Meldungen.Meldungen_3000.Nr_050,
								out_stoerung_vorzur=> GVL_Meldungen.Meldungen_3000.Nr_051,
								inout_ansteuerung:=GVL_3100.Vorbohren_Bohrhub ,
								inout_visu:=GVL_Visu_3100.Vorbohren_Bohrhub );
								
	
	GVL_Visu_3100.Stulpfraes_Vorlegehub.para.ausgang_vor_halten:=TRUE;	
	GVL_Visu_3100.Stulpfraes_Vorlegehub.para.ausgang_zur_halten:=TRUE;	
	GVL_Visu_3100.Stulpfraes_Vorlegehub.para.ueberwachung_vor_aktiv:=TRUE;	
	GVL_Visu_3100.Stulpfraes_Vorlegehub.para.ueberwachung_zur_aktiv:=TRUE;	
	GVL_Visu_3100.Stulpfraes_Vorlegehub.para.entprellungszeit_vor:=T#50MS;	
	GVL_Visu_3100.Stulpfraes_Vorlegehub.para.entprellungszeit_zur:=T#50MS;	
	fbStulpfraes_Vorlegehub (	in_endlage_vor:= EAs_3100.e_FR_3100_Schlossbearbeitung_Bohraggregat_3_Vorlegehub_ist_vorne,
								in_endlage_zur:= EAs_3100.e_FR_3100_Schlossbearbeitung_Bohraggregat_3_Vorlegehub_ist_hinten,
								in_hand:=GVL_Visu_3100.SteuerStatus.hand,
								in_auto:=GVL_Visu_3100.SteuerStatus.auto,
								in_quit:=GVL_Visu_3100.SteuerStatus.reset 
								OR GVL_0000.stoerung_quitt,
								out_vor=>EAs_3100.a_FR_3100_Schlossbearbeitung_Bohraggregat_3_Vorlegehub_vor,
								out_zur=>EAs_3100.a_FR_3100_Schlossbearbeitung_Bohraggregat_3_Vorlegehub_zurueck,
								out_stoerung_vor=> GVL_Meldungen.Meldungen_3000.Nr_052,
								out_stoerung_zur=> GVL_Meldungen.Meldungen_3000.Nr_053,
								out_stoerung_vorzur=> GVL_Meldungen.Meldungen_3000.Nr_054,
								inout_ansteuerung:=GVL_3100.Stulpfraes_Vorlegehub ,
								inout_visu:=GVL_Visu_3100.Stulpfraes_Vorlegehub );
								
	
	GVL_Visu_3100.Nullkante.para.ausgang_vor_halten:=TRUE;	
	GVL_Visu_3100.Nullkante.para.ausgang_zur_halten:=TRUE;	
	GVL_Visu_3100.Nullkante.para.ueberwachung_vor_aktiv:=TRUE;	
	GVL_Visu_3100.Nullkante.para.ueberwachung_zur_aktiv:=TRUE;	
	GVL_Visu_3100.Nullkante.para.entprellungszeit_vor:=T#50MS;	
	GVL_Visu_3100.Nullkante.para.entprellungszeit_zur:=T#50MS;	
	fbNullkante(				in_endlage_vor:= EAs_3100.e_FR_3100_Schlossbearbeitung_Nullkante_Einlauf_ist_oben 
								AND EAs_3100.e_FR_3100_Schlossbearbeitung_Nullkante_Auslauf_ist_oben,
								in_endlage_zur:= EAs_3100.e_FR_3100_Schlossbearbeitung_Nullkante_Einlauf_ist_unten
								AND EAs_3100.e_FR_3100_Schlossbearbeitung_Nullkante_Auslauf_ist_unten,
								in_hand:=GVL_Visu_3100.SteuerStatus.hand,
								in_auto:=GVL_Visu_3100.SteuerStatus.auto,
								in_quit:=GVL_Visu_3100.SteuerStatus.reset 
								OR GVL_0000.stoerung_quitt,
								out_vor=>EAs_3100.a_FR_3100_Schlossbearbeitung_Nullkante_heben,
								out_zur=>EAs_3100.a_FR_3100_Schlossbearbeitung_Nullkante_senken,
								out_stoerung_vor=> GVL_Meldungen.Meldungen_3000.Nr_055,
								out_stoerung_zur=> GVL_Meldungen.Meldungen_3000.Nr_056,
								out_stoerung_vorzur=> GVL_Meldungen.Meldungen_3000.Nr_057,
								inout_ansteuerung:=GVL_3100.Nullkante,
								inout_visu:=GVL_Visu_3100.Nullkante);
								
	
	GVL_Visu_3100.Schienenklemm.para.ausgang_vor_halten:=TRUE;	
	GVL_Visu_3100.Schienenklemm.para.ausgang_zur_halten:=TRUE;	
	GVL_Visu_3100.Schienenklemm.para.ueberwachung_vor_aktiv:=TRUE;	
	GVL_Visu_3100.Schienenklemm.para.ueberwachung_zur_aktiv:=TRUE;	
	GVL_Visu_3100.Schienenklemm.para.entprellungszeit_vor:=T#500MS;	
	GVL_Visu_3100.Schienenklemm.para.entprellungszeit_zur:=T#500MS;	
	fbSchienenklemm(			in_endlage_vor:= EAs_3100.a_FR_3100_Schlossbearbeitung_Y_Achse_Schienenklemmung_klemmen, 
								in_endlage_zur:= NOT EAs_3100.a_FR_3100_Schlossbearbeitung_Y_Achse_Schienenklemmung_klemmen,
								in_hand:=GVL_Visu_3100.SteuerStatus.hand,
								in_auto:=GVL_Visu_3100.SteuerStatus.auto,
								in_quit:=GVL_Visu_3100.SteuerStatus.reset 
								OR GVL_0000.stoerung_quitt,
								out_vor=>EAs_3100.a_FR_3100_Schlossbearbeitung_Y_Achse_Schienenklemmung_klemmen,
								out_zur=>,
								out_stoerung_vor=> GVL_Meldungen.Meldungen_3000.Nr_082,
								out_stoerung_zur=> GVL_Meldungen.Meldungen_3000.Nr_083,
								out_stoerung_vorzur=> GVL_Meldungen.Meldungen_3000.Nr_084,
								inout_ansteuerung:=GVL_3100.Schienenklemm,
								inout_visu:=GVL_Visu_3100.Schienenklemm);]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>